--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo-google-fonts/poppins": "^0.2.2",
     "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/bottom-tabs": "^6.5.2",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/native-stack": "^6.9.7",
     "@unform/core": "^2.1.6",
     "@unform/mobile": "^2.1.6",
     "expo": "~47.0.8",
@@ -28,6 +31,8 @@
     "react-native-gesture-handler": "^2.8.0",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.9",
     "styled-components": "^5.3.6"
   },
